--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ nest-asyncio==1.5.4
 notebook==6.4.8
 numpy==1.22.2
 packaging==21.3
+pandas==1.4.0
 pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.9.0
@@ -83,3 +84,4 @@ urllib3==1.26.8
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.2.3
+xgboost==1.5.2
