--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,13 @@ certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.11
 click==8.0.3
+cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
 entrypoints==0.4
 executing==0.8.2
+fonttools==4.29.1
 idna==3.3
 ipykernel==6.9.0
 ipython==8.0.1
@@ -33,7 +35,9 @@ jupyterlab==3.2.9
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.10.3
 kaggle==1.5.12
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
+matplotlib==3.5.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
 mypy-extensions==0.4.3
@@ -51,6 +55,7 @@ parso==0.8.3
 pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.0.1
 platformdirs==2.5.0
 prometheus-client==0.13.1
 prompt-toolkit==3.0.27
@@ -67,6 +72,7 @@ pyzmq==22.3.0
 requests==2.27.1
 scikit-learn==1.0.2
 scipy==1.8.0
+seaborn==0.11.2
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.2.0
